import org.springframework.boot.gradle.plugin.SpringBootPlugin

buildscript {
    ext {
        set('springBootVersion', "3.3.1")
        set('springCloudVersion', "2023.0.1")
    }

    repositories {
        mavenLocal()
        maven { url "https://maven.aliyun.com/nexus/content/groups/public/" }
        maven { url "https://oss.sonatype.org/content/groups/public/" }
        maven { url "https://repo.spring.io/libs-milestone/" }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }

}


plugins {
    id 'org.springframework.boot' version '3.3.0'  // Replace with the latest Spring Boot 3 version
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
    id 'java-library'
    id 'maven-publish'
//    id 'signing'
}

group 'com.github.carteryh'
archivesBaseName="merge-plus"
version '1.1.0'


java {
    sourceCompatibility = '17'
    targetCompatibility = '17'

    withJavadocJar()
    withSourcesJar()
}

jar {
    // 检查这里是否有类似 archiveClassifier.set('plain') 的配置
    // 或者在归档名称中直接添加了 '-plain'
//    archiveFileName.set("${archiveBaseName.get()}-${archiveVersion.get()}.jar") // 可以显式设置文件名
    archiveClassifier.set('') // 确保分类器为空字符串
}

repositories {
    mavenLocal() // 使用本地仓库
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        mavenBom  SpringBootPlugin.BOM_COORDINATES
    }
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.51'

    implementation 'org.springframework.boot:spring-boot-starter-aop'
//    compile 'org.projectlombok:lombok:1.18.12'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

//    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
//    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.16'

    implementation 'com.google.guava:guava:33.2.1-jre'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'

    implementation 'org.springframework.boot:spring-boot-starter-test'

    implementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }

//    compileOnly 'org.springframework.boot:spring-boot-starter'
//    compileOnly 'com.alibaba.fastjson2:fastjson2:2.0.51'
//
//    compile 'org.springframework.boot:spring-boot-starter-aop'
////    compile 'org.projectlombok:lombok:1.18.12'
//    compileOnly 'org.springframework.boot:spring-boot-starter-web'
//    compileOnly group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
//    compileOnly group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis'
//
//    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
//    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
//
//    compile group: 'com.google.guava', name: 'guava', version: '30.0-jre'
//    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
//
//    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
//
//    testImplementation('org.springframework.boot:spring-boot-starter-test') {
//        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
//    }
}


publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'merge-plus'
            versionMapping {
                usage('java-api') {
                    fromResolutionOf('runtimeClasspath')
                }
                usage('java-runtime') {
                    fromResolutionResult()
                }
            }

            pom {
                // 构件名称
                // 区别于artifactId，可以理解为artifactName
                name = 'merge-plus'
                // 构件描述
                description = 'merge-plus is a plus to merge dictionary value'
                // 构件主页
                url = 'https://github.com/13162576590/merge-plus'
                // 许可证名称和地址
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                // 开发者信息
                developers {
                    developer {
                        name = 'Carter'
                        email = '824291336@qq.com'
                    }
                }
                // 版本控制仓库地址
                scm {
                    url = 'https://github.com/carteryh/merge-plus'
                    connection = 'scm:git:git://github.com/13162576590/merge-plus.git'
                    developerConnection = 'scm:git:ssh://git@github.com:13162576590/merge-plus.git'
                }
            }
        }
    }
    repositories {
        maven {
            // change URLs to point to your repos, e.g. http://my.org/repo
            def releasesRepoUrl = layout.buildDirectory.dir('repos/releases')
            def snapshotsRepoUrl = layout.buildDirectory.dir('repos/snapshots')
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
        }
    }
}

//signing {
//    sign publishing.publications.mavenJava
//}


javadoc {
    if(JavaVersion.current().isJava9Compatible()) {
        options.addBooleanOption('html5', true)
    }
}